# dota2-rating

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
config/nginx/: default.conf.template
config/uwsgi/: uwsgi.ini
dota_rating/: db.sqlite3  manage.py
dota_rating/authentication/: admin.py  models.py  signals.py  urls.py  views.py
dota_rating/authentication/migrations/: 0001_initial.py  0002_alter_steamuser_avatar_alter_steamuser_avatarfull_and_more.py  0003_steamuser_steamid32.py
dota_rating/dota_rating/: asgi.py  settings.py  urls.py  wsgi.py
dota_rating/dota_rating/settings/: base.py  local.py  prod.py
dota_rating/rating/: admin.py  hero_ids.csv  models.py  serializers.py  services.py  sync.py  urls.py  utils.py  views.py
dota_rating/rating/management/commands/: load_test_players.py  sync_all_players.py
dota_rating/rating/migrations/: 0001_initial.py  0002_match_duration.py  0003_alter_match_rating_change.py
dota_rating/static/: style.css
dota_rating/templates/: index.html
