[project]
name = "dota-2-turbo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.4",
    "django-debug-toolbar>=5.2.0",
    "djangorestframework>=3.16.0",
    "psycopg==3.1.18",
    "python-decouple==3.8",
    "requests>=2.32.4",
    "setuptools==80.9.0",
    "social-auth-app-django>=5.5.1",
]
